<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:ignore="ExtraText"
tools:layout_editor_absoluteY="81dp">

<ImageView
    android:id="@+id/imgPhoto"
    android:layout_width="361dp"
    android:layout_height="155dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/imgProfile"
    android:adjustViewBounds="true"
    android:scaleType="fitCenter"
    android:src="@drawable/ic_launcher"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.521"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.345"
    tools:ignore="MissingConstraints,RtlHardcoded" android:contentDescription="@string/imgPhoto" />

<TextView
    android:id="@+id/tvCaption"
    android:layout_width="359dp"
    android:layout_height="48dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/tvLikes"
    android:ellipsize="end"
    android:maxLines="3"
    android:paddingBottom="0dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="4dp"
    android:text="@string/caption_default_text"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.36"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.704"
    tools:ignore="MissingConstraints,RtlHardcoded" />

<ImageView
    android:id="@+id/imgProfile"
    android:layout_width="67dp"
    android:layout_height="62dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:padding="8dp"
    android:scaleType="fitCenter"
    android:src="@drawable/ic_launcher"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/guideline"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@+id/guideline"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.035"
    tools:ignore="MissingConstraints,RtlHardcoded" android:contentDescription="@string/imgProfile" />


<TextView
    android:id="@+id/tvTime"
    android:layout_width="116dp"
    android:layout_height="28dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:paddingRight="8dp"
    android:paddingTop="15dp"
    android:text="@string/time_default_text"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.044"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.803"
    tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry" />

<TextView
    android:id="@+id/tvUsername"
    android:layout_width="239dp"
    android:layout_height="30dp"
    android:layout_alignParentTop="true"
    android:layout_toEndOf="@+id/imgProfile"
    android:layout_toRightOf="@+id/imgProfile"
    android:paddingTop="15dp"
    android:text="@string/username_default_text"
    android:textColor="@color/instagram_bold_font"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.082"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.176"
    tools:ignore="MissingConstraints,RtlHardcoded" />

<TextView
    android:id="@+id/tvLikes"
    android:layout_width="116dp"
    android:layout_height="28dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/imgPhoto"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:text="@string/like_default_text"
    android:textColor="@color/instagram_bold_font"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/tvCaption"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.044"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imgPhoto"
    tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry" />

<TextView
    android:id="@+id/tvComment1"
    android:layout_width="359dp"
    android:layout_height="34dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/tvViewAllComments"
    android:paddingBottom="0dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="0dp"
    android:text="@string/comment_1_default_text"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.36"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.89"
    tools:ignore="MissingConstraints,RtlHardcoded" />

<TextView
    android:id="@+id/tvViewAllComments"
    android:layout_width="360dp"
    android:layout_height="34dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/tvCaption"
    android:clickable="true"
    android:paddingBottom="0dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="0dp"
    android:text="@string/view_all_comments_default_text"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.333"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.985"
    tools:ignore="MissingConstraints,RtlHardcoded" android:focusable="true" />

<android.support.constraint.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="20dp" />

<android.support.constraint.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>